Fixed: Sửa lỗi Dark Mode biểu tượng Phó nhóm.

--- a/src/core/scss/zadark.scss
+++ b/src/core/scss/zadark.scss
@@ -2033,6 +2033,15 @@ html[data-zadark-theme="dark"] {
     }
 
     // END: Video Player
+
+    .zavatar-admin {
+      color: var(--text-primary);
+      background: var(--NG30);
+
+      &.zavatar-admin_isOwner {
+        color: var(--Y50);
+      }
+    }
   }
 }
 
